add functions for quiz to work and update questions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <form id="suggesterQuestions">
             <h4>What are arena are you looking to develop in?</h4>
             <select class="custom-select" id="question1">
-              <option selected>Evironment</option>
+              <option selected>Environment</option>
               <option value="1">Front end</option>
               <option value="2">Backend</option>
               <option value="3">A little bit of both</option>
@@ -40,23 +40,29 @@
             <select class="custom-select" id="question4">
               <option selected>Running Speed</option>
               <option value="1">Slow as molasses</option>
-              <option value="2">Obcviously fast</option>
+              <option value="2">Obviously fast</option>
             </select>
 
-            <h4>What sort of Attitude do you bring to development?</h4>
+            <h4>What attitude do you have towards writing code?</h4>
             <select class="custom-select" id="question3">
               <option selected>Type of Attitude</option>
               <option value="1">Whatever gets me across the finish line</option>
-              <option value="2">Medium</option>
-              <option value="3">Long</option>
+              <option value="2">My code is always better than everyone elses</option>
+              <option value="3">Write to the best of my ability & clean up after those who came before you</option>
             </select>
 
-            <h4>To be proficient how long do you have to learn?</h4>
+            <h4>Which quality do you relate to most as a developer?</h4>
             <select class="custom-select" id="question5">
-              <option selected>Time To Learn</option>
-              <option value="1">Short</option>
-              <option value="2">Medium</option>
-              <option value="3">Long</option>
+              <option selected>Developer Qualities</option>
+              <option value="9">Embracing Mentorship</option>
+              <option value="1">Curiosity</option>
+              <option value="2">Honesty</option>
+              <option value="3">Gumption</option>
+              <option value="4">Adaptibility</option>
+              <option value="5">Passion</option>
+              <option value="6">Iniution</option>
+              <option value="7">Technical Skills</option>
+              <option value="8">A Positive Attitude</option>
             </select>
 
             <button type="submit" class="btn btn-outline-dark">Submit</button>
@@ -65,7 +71,7 @@
 
       <!-- Quiz Results -->
       <div class="col-8">
-        <div id="incompleteQuiz">
+        <div id="incompleteQuiz" class="quizResults">
           <h2>Fill out the form to find out</h2>
           <h1>Try it out!</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
@@ -114,6 +120,11 @@
         </div>
         <div id="pythonContent">
 
+        </div>
+        <hr>
+        <div class="col-12" id="qualities">
+          <h5></h5>
+          <p>All of the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
         </div>
       </div>
     
