add fixes for several more functions

--- a/index.html
+++ b/index.html
@@ -72,17 +72,11 @@
       <!-- Quiz Results -->
       <div class="col-8">
         <div id="incompleteQuiz" class="quizResults">
-          <h2>Fill out the form to find out</h2>
+          <h3>Answer each Question to find out which language is right for you</h3>
           <h1>Try it out!</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
-          <h4>Javascipt Resources</h4>
-          <ul>
-            <li>Sample Text</li>
-            <li>Sample Text</li>
-            <li>Sample Text</li>
-          </ul>
         </div>
-        <div id="javascriptContent">
+        <div id="javascriptContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
               <h2>You Selected a Front-end Language</h2>
@@ -112,25 +106,109 @@
             </div>
           </div>
         </div>
-        <div id="swiftContent">
 
-        </div>
-        <div id="cContent">
+        <div id="swiftContent" class="quizResults">
+          <div class="row">
+            <div class="col-md-9">
+              <h3>You Selected a Front-end Language</h3>
+              <h1>Swift</h1>
+              <h2></h2>
+            </div>
+            <div class="col-md-3">
+              <img class="languageLogo" src="img/javascript-logo.png">
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+          <h4>Javascipt Resources</h4>
 
+          <div class="row">
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div id="pythonContent">
 
+        <div id="cContent" class="quizResults">
+          <div class="row">
+            <div class="col-md-9">
+              <h3>You Selected a Backend Language</h3>
+              <h1>C#</h1>
+              <h2></h2>
+            </div>
+            <div class="col-md-3">
+              <img class="languageLogo" src="img/javascript-logo.png">
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+          <h4>Javascipt Resources</h4>
+
+          <div class="row">
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+          </div>
         </div>
+
+        <div id="pythonContent" class="quizResults">
+          <div class="row">
+            <div class="col-md-9">
+              <h3>You Selected a Backend Language</h3>
+              <h1>Python</h1>
+              <h2></h2>
+            </div>
+            <div class="col-md-3">
+              <img class="languageLogo" src="img/puthon-logo.png">
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+          <h4>Javascipt Resources</h4>
+
+          <div class="row">
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+                <li>Sample Text</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
         <hr>
         <div class="col-12" id="qualities">
-          <h5></h5>
-          <p>All of the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
+          <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
         </div>
       </div>
-    
     </div>
-
-
   </div>
 </body>
 </html>
