add resources with links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h4>What are arena are you looking to develop in?</h4>
             <select class="custom-select" id="question1">
               <option selected>Environment</option>
-              <option value="1">Front end</option>
+              <option value="1">Front-end</option>
               <option value="2">Backend</option>
               <option value="3">A little bit of both</option>
             </select>
@@ -81,27 +81,28 @@
             <div class="col-md-9">
               <h2>You Selected a Front-end Language</h2>
               <h1>Javascipt</h1>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/javascript-logo.png">
             </div>
           </div>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
           <h4>Javascipt Resources</h4>
 
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="https://www.javascript.com/">Official Website</a></li>
+                <li><a href="https://www.w3schools.com/js/DEFAULT.asp">w3 Schools</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Mozilla Developer Network (MDN</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="https://www.codecademy.com/catalog/language/javascript">Code Academy Tutorials</a></li>
+                <li><a href="http://jsforcats.com/">Javascript for Cats</a></li>
+                <li><a href="https://jsbooks.revolunet.com/">JSbooks</a></li>
               </ul>
             </div>
           </div>
@@ -110,30 +111,30 @@
         <div id="swiftContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h3>You Selected a Front-end Language</h3>
+              <h3>You Selected a multi-paradigm Language</h3>
               <h1>Swift</h1>
               <h2></h2>
             </div>
             <div class="col-md-3">
-              <img class="languageLogo" src="img/javascript-logo.png">
+              <img class="languageLogo" src="img/swift-logo.png">
             </div>
           </div>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
-          <h4>Javascipt Resources</h4>
+          <h4>Swift Resources</h4>
 
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="https://developer.apple.com/">Apple Developer</a></li>
+                <li><a href="">Hacking with Swift</a></li>
+                <li><a href="https://www.raywenderlich.com/ios/paths/learn">raywenderlich</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="https://fuckingswiftui.com/">Fricking SwiftUI</a></li>
+                <li><a href="https://docs.swift.org/swift-book/GuidedTour/GuidedTour.html">Official docs</a></li>
+                <li><a href="https://codewithchris.com/learn-swift/">Coding with Chris</a></li>
               </ul>
             </div>
           </div>
@@ -147,7 +148,7 @@
               <h2></h2>
             </div>
             <div class="col-md-3">
-              <img class="languageLogo" src="img/javascript-logo.png">
+              <img class="languageLogo" src="img/csharp-logo.png">
             </div>
           </div>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
@@ -156,16 +157,16 @@
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C# | Microsoft Docs</a></li>
+                <li><a href="http://learncs.org/">LearnCS.org</a></li>
+                <li><a href="https://www.tutorialsteacher.com/csharp/csharp-tutorials">Tutorials Teacher</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="http://csharp-station.com/Tutorial/CSharp/SmartConsoleSetup.aspx">C# Station</a></li>
+                <li><a href="">Sample Text</a></li>
+                <li><a href="">Sample Text</a></li>
               </ul>
             </div>
           </div>
@@ -179,7 +180,7 @@
               <h2></h2>
             </div>
             <div class="col-md-3">
-              <img class="languageLogo" src="img/puthon-logo.png">
+              <img class="languageLogo" src="img/python-logo.png">
             </div>
           </div>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
@@ -188,16 +189,16 @@
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="">Sample Text</a></li>
+                <li><a href="">Sample Text</a></li>
+                <li><a href="">Sample Text</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
-                <li>Sample Text</li>
+                <li><a href="">Sample Text</a></li>
+                <li><a href="">Sample Text</a></li>
+                <li><a href="">Sample Text</a></li>
               </ul>
             </div>
           </div>
