add commented sections in stylesheet & start styling process

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <!-- Intro -->
     <h1>Programming Language Suggester</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, natus delectus minus nisi rerum unde omnis praesentium quisquam corporis itaque molestias dolorem! Vel quas dignissimos cum delectus dicta accusantium cumque.</p>
+    <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
 
     <!-- Quiz -->
     <div class="row">
@@ -81,7 +81,7 @@
             <div class="col-md-9">
               <h2>You Selected a Front-end Language</h2>
               <h1>Javascipt</h1>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+              <p>Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it. <cite><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript from Wikipedia</a></cite></p>
 
             </div>
             <div class="col-md-3">
@@ -152,7 +152,7 @@
             </div>
           </div>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
-          <h4>Javascipt Resources</h4>
+          <h4>C# Resources</h4>
 
           <div class="row">
             <div class="col-md-6">
@@ -165,8 +165,8 @@
             <div class="col-md-6">
               <ul>
                 <li><a href="http://csharp-station.com/Tutorial/CSharp/SmartConsoleSetup.aspx">C# Station</a></li>
-                <li><a href="">Sample Text</a></li>
-                <li><a href="">Sample Text</a></li>
+                <li><a href="http://www.kau.edu.sa/Files/830/Files/55533_C_Sharp_Programming.pdf">C# Programming</a></li>
+                <li><a href="http://www.techotopia.com/index.php/C_Sharp_Essentials">C# Essentials</a></li>
               </ul>
             </div>
           </div>
@@ -183,22 +183,23 @@
               <img class="languageLogo" src="img/python-logo.png">
             </div>
           </div>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
-          <h4>Javascipt Resources</h4>
+          <p>Python is an interpreted, high-level and general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects. <cite><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python (programming language) from Wikipedia</a></cite></p>
+          <hr>
+          <h4>Python Resources</h4>
 
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li><a href="">Sample Text</a></li>
-                <li><a href="">Sample Text</a></li>
-                <li><a href="">Sample Text</a></li>
+                <li><a href="https://www.python.org/">Official Python Website</a></li>
+                <li><a href="https://www.codecademy.com/learn/learn-python">Code Academy</a></li>
+                <li><a href="https://inventwithpython.com/">Invent with Python</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li><a href="">Sample Text</a></li>
-                <li><a href="">Sample Text</a></li>
-                <li><a href="">Sample Text</a></li>
+                <li><a href="https://pythonspot.com/">Python Spot</a></li>
+                <li><a href="https://developers.google.com/edu/python/?hl=en">Google's Python Class eBook</a></li>
+                <li><a href="http://www.diveintopython3.net/">Dive into Python 3</a></li>
               </ul>
             </div>
           </div>
