add more styles

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body>
   <div class="container">
     <!-- Intro -->
-    <h1>Programming Language Suggester</h1>
-    <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
+    <div class="row jumbotron">
+      <div class="col-12">
+        <h1>Programming Language Suggester</h1>
+        <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
+      </div>
+    </div>
 
     <!-- Quiz -->
     <div class="row">
-      <div class="col-4">
+      <div class="col-4" id="sidebar">
           <form id="suggesterQuestions">
             <h4>What are arena are you looking to develop in?</h4>
             <select class="custom-select" id="question1">
