add more styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Bitter|PT+Sans:400i" rel="stylesheet">  <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
   <title>Programming Language Suggester</title>
@@ -16,7 +16,6 @@
     <div class="row jumbotron">
       <div class="col-12">
         <h1>Programming Language Suggester</h1>
-        <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
       </div>
     </div>
 
@@ -83,8 +82,9 @@
         <div id="javascriptContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h2>You Selected a Front-end Language</h2>
+              <h3>You Selected a Front-end Language</h3>
               <h1>Javascipt</h1>
+              <h2></h2>
               <p>Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it. <cite><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript from Wikipedia</a></cite></p>
 
             </div>
@@ -117,13 +117,13 @@
             <div class="col-md-9">
               <h3>You Selected a multi-paradigm Language</h3>
               <h1>Swift</h1>
-              <h2></h2>
+              <h2>Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc. and the open-source community, first released in 2014.</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/swift-logo.png">
             </div>
           </div>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
           <h4>Swift Resources</h4>
 
           <div class="row">
@@ -214,6 +214,10 @@
           <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
         </div>
       </div>
+    </div>
+    <div id="footer">
+      <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
+      <a href="https://github.com/basicjohn">Created by John Edmondson</a>
     </div>
   </div>
 </body>
