add styles to sidebar, add footer, style header

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="row">
             <div class="col-md-9">
               <h3>You Selected a Front-end Language</h3>
-              <h1>Javascipt</h1>
+              <h1>JavaScript</h1>
               <h2></h2>
               <p>Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it. <cite><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript from Wikipedia</a></cite></p>
 
@@ -92,7 +92,7 @@
               <img class="languageLogo" src="img/javascript-logo.png">
             </div>
           </div>
-          <h4>Javascipt Resources</h4>
+          <h4>JavaScript Resources</h4>
 
           <div class="row">
             <div class="col-md-6">
@@ -209,13 +209,14 @@
           </div>
         </div>
 
-        <hr>
+        <hr class="light">
         <div class="col-12" id="qualities">
           <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
         </div>
       </div>
     </div>
     <div id="footer">
+      <hr class="yellow">
       <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
       <a href="https://github.com/basicjohn">Created by John Edmondson</a>
     </div>
