add instructions to sidebar

--- a/index.html
+++ b/index.html
@@ -22,54 +22,55 @@
     <!-- Quiz -->
     <div class="row">
       <div class="col-4" id="sidebar">
-          <form id="suggesterQuestions">
-            <h4>What are arena are you looking to develop in?</h4>
-            <select class="custom-select" id="question1">
-              <option selected>Environment</option>
-              <option value="1">Front-end</option>
-              <option value="2">Backend</option>
-              <option value="3">A little bit of both</option>
-            </select>
-
-            <h4>To be proficient how long do you have to learn?</h4>
-            <select class="custom-select" id="question2">
-              <option selected>Time To Learn</option>
-              <option value="1">Short</option>
-              <option value="2">Medium</option>
-              <option value="3">Long</option>
-            </select>
-
-            <h4>Do you want the Programming Language to fast?</h4>
-            <select class="custom-select" id="question4">
-              <option selected>Running Speed</option>
-              <option value="1">Slow as molasses</option>
-              <option value="2">Obviously fast</option>
-            </select>
-
-            <h4>What attitude do you have towards writing code?</h4>
-            <select class="custom-select" id="question3">
-              <option selected>Type of Attitude</option>
-              <option value="1">Whatever gets me across the finish line</option>
-              <option value="2">My code is always better than everyone elses</option>
-              <option value="3">Write to the best of my ability & clean up after those who came before you</option>
-            </select>
-
-            <h4>Which quality do you relate to most as a developer?</h4>
-            <select class="custom-select" id="question5">
-              <option selected>Developer Qualities</option>
-              <option value="9">Embracing Mentorship</option>
-              <option value="1">Curiosity</option>
-              <option value="2">Honesty</option>
-              <option value="3">Gumption</option>
-              <option value="4">Adaptibility</option>
-              <option value="5">Passion</option>
-              <option value="6">Iniution</option>
-              <option value="7">Technical Skills</option>
-              <option value="8">A Positive Attitude</option>
-            </select>
-
-            <button type="submit" class="btn btn-outline-dark">Submit</button>
-          </form>
+        <p id="instructions">complete each question to get a suggestion</p>
+        <form id="suggesterQuestions">
+          <h4>What are arena are you looking to develop in?</h4>
+          <select class="custom-select" id="question1">
+            <option selected>Environment</option>
+            <option value="1">Front-end</option>
+            <option value="2">Backend</option>
+            <option value="3">A little bit of both</option>
+          </select>
+          <hr class="dark">
+          <h4>To be proficient how long do you have to learn?</h4>
+          <select class="custom-select" id="question2">
+            <option selected>Time To Learn</option>
+            <option value="1">Short</option>
+            <option value="2">Medium</option>
+            <option value="3">Long</option>
+          </select>
+          <hr class="dark">
+          <h4>Do you want the Programming Language to fast?</h4>
+          <select class="custom-select" id="question4">
+            <option selected>Running Speed</option>
+            <option value="1">Slow as molasses</option>
+            <option value="2">Obviously fast</option>
+          </select>
+          <hr class="dark">
+          <h4>What attitude do you have towards writing code?</h4>
+          <select class="custom-select" id="question3">
+            <option selected>Type of Attitude</option>
+            <option value="1">Whatever gets me across the finish line</option>
+            <option value="2">My code is always better than everyone elses</option>
+            <option value="3">Write to the best of my ability & clean up after those who came before you</option>
+          </select>
+          <hr class="dark">
+          <h4>Which quality do you relate to most as a developer?</h4>
+          <select class="custom-select" id="question5">
+            <option selected>Developer Qualities</option>
+            <option value="9">Embracing Mentorship</option>
+            <option value="1">Curiosity</option>
+            <option value="2">Honesty</option>
+            <option value="3">Gumption</option>
+            <option value="4">Adaptibility</option>
+            <option value="5">Passion</option>
+            <option value="6">Iniution</option>
+            <option value="7">Technical Skills</option>
+            <option value="8">A Positive Attitude</option>
+          </select>
+          <hr class="dark">
+          <button type="submit" class="btn btn-outline-dark">Submit</button>
+        </form>
       </div>
 
       <!-- Quiz Results -->
